@@ -11,16 +11,18 @@ DIST libtorrent-0.12.5.tar.gz 587228 RMD160 645ae77a23c77c1d2134431b182cb206ab25
 DIST libtorrent-0.12.6.tar.gz 594113 RMD160 62f0c9737d4ca9621c42d673ea997f9d36875530 SHA1 bf7082f98bd6281493cba94a456697fb88c2c21b SHA256 7b02f33164966a05261e83bad76eef537198fefe76eaf57dfd64bb27c7d77129
 DIST libtorrent-0.12.7.tar.gz 632060 RMD160 13c66bb2ea50289219a58a4831c4b93b5c775197 SHA1 8f00bbac7796230085c90cd15946374d07843c43 SHA256 96f59ec9593cd77ef9bad78cadef9ce6f1040243cccf1108aa7844e58d632a97
 DIST libtorrent-0.13.1.tar.gz 723523 RMD160 371eff9d9928aa4dedcb291baad2ae585315d531 SHA1 e63d98b1d46addf8f760c9a65028a7c270da853f SHA256 9e51ab1409444238de2a2a9e24405d43b1c18b958bc14e7c598aa69ab6f1baf6
+DIST libtorrent-0.13.2.tar.gz 725088 RMD160 090e6af9b4318a6176064159f6a8f70ab708c7fe SHA1 4f34a744fbe10c54aaf53d34681fabc1a49d7257 SHA256 ed2f2dea16c29cac63fa2724f6658786d955f975861fa6811bcf1597ff8a5e4f
 EBUILD libtorrent-0.12.5.ebuild 1402 RMD160 92e5bd71321b5d1492029aa676bbff954495996f SHA1 2492f6415878e0306c22eb69add95e1a123c3a6a SHA256 96d4f8a80bd4e52744df565055a8371b3ac76c72a98594c52f7f2a20c14bf5ba
 EBUILD libtorrent-0.12.6.ebuild 1530 RMD160 9430ad3c1df1c4895e92a8199e8670fc07a58478 SHA1 bf238c08ae13604eaab5ab39529ef3d5a2e9188d SHA256 0fd042cd1f541a8ff877e2d116a1bcdfd4bf5d8482648fcf9de8c3f3702a1c46
 EBUILD libtorrent-0.12.7-r1.ebuild 1724 RMD160 10a3c7de66d7e86d477a0b48ed2795bbb28b57e8 SHA1 eff12b2d95ed169e6fe5297b321499c9e9678541 SHA256 993a5b986c9b231e05cd9de41005d7fef2e01863a33fb943a571bb337e8cc156
 EBUILD libtorrent-0.13.1.ebuild 1483 RMD160 9291e66f502d922cc36ca25efa450630f4a5a549 SHA1 5e991542e645130cb6ebdc2a6bac0a6273bdf8e2 SHA256 2ec36c75886c9915dcefc45239bf9230aed411aac44b9a6f89bb4b7b4c248600
-MISC ChangeLog 25610 RMD160 d2e8d32092b0dec6d63435f5ea432732c7015c89 SHA1 4499032199981a6925f9ec8392cae57a271f421e SHA256 2516ce1acc26e27e93643c309e1c35e6a7c73f3d3449dbb35e4f60895568b889
+EBUILD libtorrent-0.13.2.ebuild 1401 RMD160 d511c44ad9c9efbc31133af277f0a7bc55010158 SHA1 5c642c8950a0e825968c415e04bed821bfc1c908 SHA256 31138c00f0378b5c515ea47b6c2ae6166c19479072073dff3b81f8994557156a
+MISC ChangeLog 25748 RMD160 90b0a06606b0e32a8f361741cb7fbfbc439aa7e5 SHA1 3a3f08f5ad24a1f3c4aaa5371a0077abde25d576 SHA256 553536a733defa3cd1af8749eafff992391ecc9bc71ed2b3a21830f11f5dd88e
 MISC metadata.xml 160 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd SHA1 813ef5bc57f6a8d95e7cab7a745a2a824858f49c SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk+/5JQACgkQX3X2B8XHToluCgCfYAMZzjcVyqBpppR02JjjBDpZ
-yTEAn2FfW2MtN336RjAY/vWr30ZQBPMV
-=IXpV
+iEYEARECAAYFAk/Xog4ACgkQX3X2B8XHTokMjACdFS2mIl/xXxPDp3jsBUf6KoHT
+42sAn24qqYjin4tIzlgQan5M2zEw7xpi
+=dtAz
 -----END PGP SIGNATURE-----
